--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "gatsby": "^2.0.33",
+    "gatsby-image": "^2.2.43",
     "gatsby-plugin-google-analytics": "^2.0.14",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.4.12",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
+    "gatsby-transformer-sharp": "^2.3.18",
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -26,9 +29,9 @@
     "babel-eslint": "^9.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-react": "^7.11.1",
     "prettier-eslint": "^8.8.2"
   }
