--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gatsby": "^2.0.33",
+    "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-google-analytics": "^2.0.14",
     "gatsby-plugin-react-helmet": "^3.0.4",
