--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
