--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.8",
     "file-saver": "^2.0.2",
     "gatsby": "^2.0.33",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-google-analytics": "^2.0.14",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-mdx": "^1.1.3",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.4.12",
     "gatsby-remark-autolink-headers": "^2.2.1",
+    "gatsby-remark-images": "^3.2.1",
     "gatsby-source-filesystem": "^2.0.12",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-remark": "^2.1.15",
